--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ torch~=2.2.0+cu118
 tqdm~=4.66.1
 matplotlib~=3.8.2
 scipy~=1.12.0
+hyperopt==0.2.7
+setuptools==69.1.1 # for hyperopt to work, otheriwse: ModuleNotFoundError: No module named 'pkg_resources'
+pandas==2.2.1
