--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ matplotlib~=3.8.2
 scipy~=1.12.0
 hyperopt==0.2.7
 setuptools==69.1.1 # for hyperopt to work, otheriwse: ModuleNotFoundError: No module named 'pkg_resources'
-pandas==2.2.1
+pandas==2.0.3
+torchcfm
